# SmiteBuilder

./: .gitignore  README.md  bot.py  cov.xml  easy_smitebuilds.py  ideas.md  methodology.ipynb  playground.ipynb  pyproject.toml  requirements.in  requirements.txt  test_storeloadbuild.json  tree.dot  utilities.py
smitebuilder/: bot.py  dt_tracer.py  etl.py  main.py  smitebuild.py  smiteinfo.py
tests/: test_dt_tracer.py  test_etl.py  test_godmap.json  test_itemmap.json  test_matchdata.json  test_smitebuild.py
