[tool.poetry]
name = "smitebuilder"
version = "0.1.0"
description = ""
authors = ["Jack Stillwell <JackStillwell@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn= "^1.3.0"
numpy = "^1.25.2"
discord = "^2.3.2"
bidict = "^0.22.1"
pymongo = "^4.5.0"
matplotlib = "^3.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
